# modelpool

./: .gitignore  README.md  pyproject.toml  resources.yaml  worker.yaml
deploy/: install-worker.sh  modelpool-worker.service  start_server_nothink.sh  start_server_thinking.sh
docs/: ARCHITECTURE.md  TASKS.md
src/modelpool/: __init__.py  registry.py
src/modelpool/bench/: __init__.py  cli.py
src/modelpool/pool/: __init__.py  cli.py  proxy.py  router.py  server.py
src/modelpool/worker/: __init__.py  cli.py  loader.py  server.py  watchdog.py
tests/bench/: bench_concurrent.py  bench_decode_isolation.py  bench_hermes.py  bench_parallel.py  bench_prefill_rag.py  bench_prefill_scale.py  bench_resource.py
tests/bench/results/: .gitkeep  2026-05-27_aitooolchain-35b-a3b-ikllama.json  2026-05-27_hwrouter-27b-mtp-parallel.json  2026-05-27_hwrouter-27b-mtp.json  2026-05-27_hwrouter-35b-a3b.json  vllm-stock-27b-fp8.json  vllm-toolbox-27b-aiter.json
tests/unit/: test_loader.py  test_pool_routing.py  test_pool_server.py  test_proxy.py  test_registry.py  test_review_fixes.py  test_router.py  test_watchdog.py  test_worker_auth.py  test_worker_server.py
