[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelpool"
version = "0.1.0"
description = "On-demand LLM resource orchestration for GPU clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
modelpool-worker = "modelpool.worker.cli:main"
modelpool-pool = "modelpool.pool.cli:main"
modelpool-bench = "modelpool.bench.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
